[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.11.0", features = ["utils"] }
gloo-console = "0.3.0"
gloo-net = "0.5.0"
js-sys = "0.3.69"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
  "Document",
  "Blob",
  "File",
  "FileReader",
  "DomRect",
  "Window",
  "RequestMode",
] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
yew-datepicker = "0.2.0"
chrono = "0.4.31"
pure-rust-locales = "0.7.0"

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
